--- a/index.html
+++ b/index.html
@@ -355,6 +355,9 @@
                     <div class="leaderboard-score">28</div>
                 </div>
             </div>
+            <a href="submit.html" style="display: block; margin: 1rem 0; padding: 8px 12px; background: #bba77a; color: #3a2c1a; text-decoration: none; text-align: center; border: 2px solid #3a2c1a; font-size: 0.9rem; font-weight: bold; letter-spacing: 1px; transition: background 0.2s;">
+                Submit Your Forecast
+            </a>
         </div>
         <div class="window content">
             <div class="section-title">Forecasts</div>
