Move submit button to header and change form to dropdown of existing forecasts

--- a/index.html
+++ b/index.html
@@ -324,7 +324,12 @@
     </style>
 </head>
 <body>
-    <div class="window-header" style="width:100vw;box-sizing:border-box;">Battle of the Plans - Season 2</div>
+    <div class="window-header" style="width:100vw;box-sizing:border-box;display:flex;justify-content:space-between;align-items:center;">
+        <span>Battle of the Plans - Season 2</span>
+        <a href="submit.html" style="background: #bba77a; color: #3a2c1a; text-decoration: none; padding: 4px 8px; border: 2px solid #3a2c1a; font-size: 0.8rem; font-weight: bold; letter-spacing: 1px; transition: background 0.2s;">
+            Submit Forecast
+        </a>
+    </div>
     <div class="main-layout">
         <div class="window sidebar">
             <div class="section-title">Leaderboard</div>
@@ -355,9 +360,7 @@
                     <div class="leaderboard-score">28</div>
                 </div>
             </div>
-            <a href="submit.html" style="display: block; margin: 1rem 0; padding: 8px 12px; background: #bba77a; color: #3a2c1a; text-decoration: none; text-align: center; border: 2px solid #3a2c1a; font-size: 0.9rem; font-weight: bold; letter-spacing: 1px; transition: background 0.2s;">
-                Submit Your Forecast
-            </a>
+
         </div>
         <div class="window content">
             <div class="section-title">Forecasts</div>
