--- a/submit.html
+++ b/submit.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Submit Your Forecast - Battle of the Plans</title>
+    <title>Submit Your Prediction - Battle of the Plans</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body {
@@ -98,15 +98,27 @@
 </head>
 <body>
     <div class="window">
-        <h1>Submit Your Forecast</h1>
+        <h1>Submit Your Prediction</h1>
         <form id="forecastForm">
             <div>
                 <label for="name">Your Name</label><br>
                 <input type="text" id="name" name="name" required maxlength="32">
             </div>
             <div>
-                <label for="question">Forecast Question</label><br>
-                <input type="text" id="question" name="question" required maxlength="100">
+                <label for="forecast">Select Forecast</label><br>
+                <select id="forecast" name="forecast" required style="font-family: inherit; font-size: 1rem; padding: 8px; border: 2px solid #bba77a; border-radius: 4px; background: #fff6e0; color: #3a2c1a; outline: none; width: 100%;">
+                    <option value="">Choose a forecast...</option>
+                    <option value="1">Hvor mange slutter i Origo før vi flytter til Helsfyr</option>
+                    <option value="2">Blir Oslonøkkelen en del av KS</option>
+                    <option value="3">Angrer Isak på oppsigelsen sin</option>
+                    <option value="4">Blir Bernard sjef over Punkt</option>
+                    <option value="5">Får Oslonøkkelen eget Teamrom</option>
+                    <option value="6">Hva koster klokka til Mini-Tangen</option>
+                    <option value="7">Hva blir den nye bilen til Thor</option>
+                    <option value="8">Will the Q4 marketing campaign launch?</option>
+                    <option value="9">Will the team win an industry award?</option>
+                    <option value="10">Will the company expand internationally?</option>
+                </select>
             </div>
             <div>
                 <label for="prediction">Your Prediction</label><br>
