--- a/submit.html
+++ b/submit.html
@@ -119,6 +119,7 @@
                     <option value="Armin">Armin</option>
                     <option value="Kim">Kim</option>
                     <option value="Lily">Lily</option>
+                    <option value="Mamen">Mamen</option>
                     <option value="Thor">Thor</option>
                 </select>
             </div>
@@ -133,9 +134,6 @@
                     <option value="5">Får Oslonøkkelen eget Teamrom</option>
                     <option value="6">Hva koster klokka til Mini-Tangen</option>
                     <option value="7">Hva blir den nye bilen til Thor</option>
-                    <option value="8">Will the Q4 marketing campaign launch?</option>
-                    <option value="9">Will the team win an industry award?</option>
-                    <option value="10">Will the company expand internationally?</option>
                 </select>
             </div>
             <div id="predictionField">
@@ -162,10 +160,7 @@
             '4': 'boolean', // Blir Bernard sjef over Punkt
             '5': 'boolean', // Får Oslonøkkelen eget Teamrom
             '6': 'number', // Hva koster klokka til Mini-Tangen
-            '7': 'list', // Hva blir den nye bilen til Thor
-            '8': 'boolean', // Will the Q4 marketing campaign launch?
-            '9': 'boolean', // Will the team win an industry award?
-            '10': 'boolean' // Will the company expand internationally?
+            '7': 'list' // Hva blir den nye bilen til Thor
         };
         
         // List options for specific forecasts
