--- a/submit.html
+++ b/submit.html
@@ -121,6 +121,7 @@
                     <option value="Lily">Lily</option>
                     <option value="Mamen">Mamen</option>
                     <option value="Thor">Thor</option>
+                    <option value="Isak">Isak</option>
                 </select>
             </div>
             <div>
